--- a/FE/src/styles/globals.css
+++ b/FE/src/styles/globals.css
@@ -1,11 +1,37 @@
-.title {
-  margin-top: 200px;
-  text-align: center;
-  font-size: 50px;
-  font-weight: 600;
+body {
+  background-color: black;
   color: white;
 }
 
-body {
-  background-color: black;
+.title {
+  margin-top: 200px;
+  text-align: center;
+  font-size: 60px;
+  font-weight: 600;
+  text-shadow: 10px 10px 4px rgba(255, 255, 255, 0.5);
+}
+
+.link {
+  text-decoration: none;
+  color: yellow;
+}
+
+.introduction {
+  margin: 0 auto;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  width: fit-content;
+}
+
+.github-profile {
+  margin-top: 100px;
+  justify-content: center;
+  align-items: center;
+  width: fit-content;
+}
+
+.github-profile .table {
+  margin-left: auto;
+  margin-right: auto;
 }
