--- a/FE/src/styles/globals.css
+++ b/FE/src/styles/globals.css
@@ -1,81 +1,87 @@
-html, body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    background-color: black;
-    color: white;
+  background-color: black;
+  color: white;
 }
 
 .title {
-    margin-top: 200px;
-    text-align: center;
-    font-size: 60px;
-    font-weight: 600;
-    text-shadow: 10px 10px 4px rgba(255, 255, 255, 0.5);
+  margin-top: 200px;
+  text-align: center;
+  font-size: 60px;
+  font-weight: 600;
+  text-shadow: 10px 10px 4px rgba(255, 255, 255, 0.5);
 }
 
 .link {
-    text-decoration: none;
-    color: #D69F05;
+  text-decoration: none;
+  color: #d69f05;
 }
 
 .navbar {
-    background: linear-gradient(to left, #B1BA5C, #ffffff);
-    padding: 10px;
-    justify-content: flex-end;
-    text-align: center;
+  background: linear-gradient(to left, #b1ba5c, #ffffff);
+  padding: 10px;
+  justify-content: flex-end;
+  text-align: center;
 }
 
 .navbar a {
-    color: #364B0A;
-    font-weight: bolder;
-    margin-right: 15px;
-    text-decoration: none;
-    display: inline-block;
+  color: #364b0a;
+  font-weight: bolder;
+  margin-right: 15px;
+  text-decoration: none;
+  display: inline-block;
 }
 
 .introduction {
-    margin: 0 auto;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    width: fit-content;
+  margin: 0 auto;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  width: fit-content;
 }
 
 .github-profile {
-    margin-top: 100px;
-    justify-content: center;
-    align-items: center;
-    width: fit-content;
+  margin-top: 100px;
+  justify-content: center;
+  align-items: center;
+  width: fit-content;
 }
 
 .github-profile .table {
-    margin-left: auto;
-    margin-right: auto;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.github-profile img {
+  width: 160px;
+  height: 160px;
 }
 
 .login-container {
-    width: 300px;
-    background: linear-gradient(to left, #E02287, #6862D1);
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
+  width: 300px;
+  background: linear-gradient(to left, #e02287, #6862d1);
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
 
-    margin: 100px auto;
-    justify-content: center;
-    align-items: center;
-    height: 100px;
-    padding: 20px;
+  margin: 100px auto;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+  padding: 20px;
 }
 
 .login-container h2 {
-    margin-top: 20px;
-    color: black;
+  margin-top: 20px;
+  color: black;
 }
 
 .login-container button {
-    margin: 0 auto;
+  margin: 0 auto;
 }
