--- a/FE/src/styles/globals.css
+++ b/FE/src/styles/globals.css
@@ -64,6 +64,7 @@ body {
 }
 
 .login-container {
+  /* display: flex; */
   width: 300px;
   background: linear-gradient(to left, #e02287, #6862d1);
   border-radius: 10px;
@@ -73,12 +74,17 @@ body {
   margin: 100px auto;
   justify-content: center;
   align-items: center;
-  height: 100px;
+  height: 170px;
   padding: 20px;
+  gap: 10px;
+  flex-direction: column;
+  align-content:stretch;
+
 }
 
 .login-container h2 {
   margin-top: 20px;
+  margin-bottom: 20px;
   color: black;
 }
 
