--- a/FE/src/styles/globals.css
+++ b/FE/src/styles/globals.css
@@ -78,8 +78,7 @@ body {
   padding: 20px;
   gap: 10px;
   flex-direction: column;
-  align-content:stretch;
-
+  align-content: stretch;
 }
 
 .login-container h2 {
@@ -90,4 +89,11 @@ body {
 
 .login-container button {
   margin: 0 auto;
+}
+
+.google-map {
+  margin-top: 100px;
+  justify-content: center;
+  align-items: center;
+  width: fit-content;
 }
