--- a/airdnb/src/main/resources/static/admin/css/main.css
+++ b/airdnb/src/main/resources/static/admin/css/main.css
@@ -50,6 +50,11 @@ button:hover {
     background-color: #0056b3;
 }
 
+button:disabled {
+    background-color: #cccccc;
+    cursor: not-allowed;
+}
+
 .hidden {
     display: none;
 }
