--- a/airdnb/src/main/resources/templates/admin/main.html
+++ b/airdnb/src/main/resources/templates/admin/main.html
@@ -12,16 +12,19 @@
     <form id="signup-form">
         <label for="admin-id">ID:</label>
         <input type="email" id="admin-id" name="admin-id" required>
-
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
+        <button type="button" id="email-verify-btn">이메일 인증</button>
 
         <div id="auth-code-container" class="hidden">
             <label for="auth-code">Enter Authentication Code:</label>
-            <input type="text" id="auth-code" name="auth-code">
+            <input type="text" id="auth-code" name="auth-code" required>
         </div>
 
-        <button type="button" id="signup-btn">Sign Up</button>
+        <div id="password-container" class="hidden">
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required>
+        </div>
+
+        <button type="button" id="signup-btn" class="hidden">Sign Up</button>
         <button type="button" id="next-btn" class="hidden">Next</button>
     </form>
 </div>
