--- a/airdnb/src/main/resources/templates/admin/login.html
+++ b/airdnb/src/main/resources/templates/admin/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Login</title>
-    <link rel="stylesheet" href="/admin/css/login.css">
+    <link rel="stylesheet" href="/css/admin/login.css">
 </head>
 <body>
 <div class="container">
@@ -20,6 +20,6 @@
     </form>
 </div>
 
-<script src="/admin/js/login.js"></script>
+<script src="/js/admin/login.js"></script>
 </body>
 </html>
