--- a/airdnb/src/main/resources/templates/admin/main.html
+++ b/airdnb/src/main/resources/templates/admin/main.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Signup</title>
-    <link rel="stylesheet" href="/admin/css/main.css">
+    <link rel="stylesheet" href="/css/admin/main.css">
 </head>
 <body>
 <div class="container">
@@ -29,6 +29,6 @@
     </form>
 </div>
 
-<script src="/admin/js/main.js"></script>
+<script src="/js/admin/main.js"></script>
 </body>
 </html>
