design: 상단 페이지 이동 버튼 추가

--- a/airdnb/src/main/resources/templates/accommodation_type/main.html
+++ b/airdnb/src/main/resources/templates/accommodation_type/main.html
@@ -3,8 +3,11 @@
 <head>
     <title>Accommodation Types</title>
     <link rel="stylesheet" href="/css/accommodation_type/main.css">
+    <link rel="stylesheet" href="/css/setting/top-btn.css">
+
 </head>
 <body>
+<div class="top-button-container"></div>
 <h1>숙소 유형 페이지</h1>
 <button class="create-button" onclick="toggleCreateForm()">Create</button>
 <div class="create-form" id="createForm">
@@ -15,5 +18,6 @@
     <!-- js data insert area -->
 </ul>
 <script src="/js/accommodation_type/main.js"></script>
+<script src="/js/setting/top-btn.js"></script>
 </body>
 </html>
