--- a/airdnb/src/main/resources/templates/accommodation/createForm.html
+++ b/airdnb/src/main/resources/templates/accommodation/createForm.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <title>숙소 등록</title>
     <link rel="stylesheet" href="/css/accommodation/createForm.css">
+    <link rel="stylesheet" href="/css/setting/top-btn.css">
 </head>
 <body>
 <div class="container">
+    <div class="top-button-container"></div>
     <h1>숙소 등록</h1>
     <form id="accommodationForm">
         <label for="memberId">숙소 소유주 이름 (이메일):</label>
@@ -53,5 +55,6 @@
     </form>
 </div>
 <script src="/js/accommodation/createForm.js"></script>
+<script src="/js/setting/top-btn.js"></script>
 </body>
 </html>
