--- a/FE/src/styles/App.css
+++ b/FE/src/styles/App.css
@@ -6,10 +6,10 @@ body {
   font-family: "Noto Sans KR";
 }
 
-body {
+/* body {
   background-color: black;
   color: white;
-}
+} */
 
 .title {
   margin-top: 200px;
@@ -30,6 +30,8 @@ body {
   justify-content: center;
   align-items: center;
   width: fit-content;
+  background-color: black;
+  color: white;
 }
 
 .github-profile {
@@ -77,7 +79,7 @@ body {
   margin: 0 auto;
 }
 
-.marker {
+/* .marker {
   position: relative;
   display: flex;
   align-items: center;
@@ -99,4 +101,13 @@ body {
 .marker:hover {
   color: white;
   background-color: #2f2f2f;
+} */
+
+.foreground-content {
+  position: relative;
+  z-index: 1; /* Ensure content is above the background */
+  pointer-events: auto; /* Enable pointer events for the content */
+  background: url("/images/background.jpg") no-repeat center center;
+  background-size: cover;
+  height: 100vh;
 }
