--- a/FE/src/styles/nav.module.css
+++ b/FE/src/styles/nav.module.css
@@ -1,10 +1,4 @@
 /* src/styles/nav.module.css */
-.container {
-  position: relative;
-  height: 100vh;
-  background: url("/images/background.jpg") no-repeat center center;
-  background-size: cover;
-}
 
 .navbar {
   display: flex;
@@ -16,6 +10,7 @@
   position: fixed;
   top: 0;
   width: 100%;
+  z-index: 2;
 }
 
 .navLogo {
