--- a/FE/src/styles/App.css
+++ b/FE/src/styles/App.css
@@ -24,6 +24,13 @@ body {
   color: #d69f05;
 }
 
+.introduction-page {
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  color: white;
+}
+
 .introduction {
   margin: 0 auto;
   text-align: center;
@@ -111,4 +118,3 @@ body {
   background-size: cover;
   height: 100vh;
 }
-
