--- a/FE/src/styles/BookingListPage.module.css
+++ b/FE/src/styles/BookingListPage.module.css
@@ -1,29 +1,47 @@
 .page {
-    padding: 20px;
-    max-width: 800px;
-    margin: 0 auto;
-    background: white;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  }
-  
-  h2 {
-    text-align: center;
-    margin-bottom: 20px;
-  }
-  
-  ul {
-    list-style: none;
-    padding: 0;
-  }
-  
-  li {
-    margin-bottom: 20px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-  }
-  
-  p {
-    margin: 5px 0;
-  }
+  padding: 20px;
+  max-width: 800px;
+  background: white;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  z-index: 2;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100vh;
+  padding-top: 80px;
+}
+
+.title {
+  margin: 0 auto;
+  text-align: center;
+  font-weight: bolder;
+  font-size: x-large;
+}
+
+.container {
+  margin-top: 20px;
+  flex: 1; /* 남은 공간을 차지하도록 설정 */
+  overflow-y: auto; /* 세로 스크롤 가능하게 설정 */
+  width: 100%; /* 가로 크기를 부모 요소에 맞춤 */
+}
+
+.container ul {
+  list-style: none;
+  padding: 0;
+  margin: 0; /* ul 요소의 기본 마진 제거 */
+}
+
+.container li {
+  margin-bottom: 20px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.page p {
+  margin: 5px 0;
+  text-align: center;
+}
