--- a/FE/src/styles/nav.module.css
+++ b/FE/src/styles/nav.module.css
@@ -1,12 +1,11 @@
 /* src/styles/nav.module.css */
-
 .navbar {
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 10px 20px;
   background-color: transparent;
-  /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); */
+  box-shadow: 0 15px 10px rgba(0, 0, 0, 0.1);
   position: fixed;
   top: 0;
   width: 100%;
