--- a/FE/src/styles/AccommodationDetail.css
+++ b/FE/src/styles/AccommodationDetail.css
@@ -12,6 +12,8 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   animation: fadeIn 1s ease-in-out;
+  flex-direction: column;
+  align-items: center;
 }
 
 @keyframes fadeIn {
@@ -73,13 +75,15 @@
   color: #555;
 }
 
-.room-info h3, .location-info h3 {
+.room-info h3,
+.location-info h3 {
   margin-bottom: 10px;
   font-size: 18px;
   color: #333;
 }
 
-.room-info ul, .location-info p {
+.room-info ul,
+.location-info p {
   margin: 0;
   padding: 0;
   list-style-type: none;
@@ -117,7 +121,8 @@
   animation: fadeIn 1s ease-in-out;
 }
 
-.booking-info .price, .booking-info .total-price {
+.booking-info .price,
+.booking-info .total-price {
   font-size: 20px;
   margin-bottom: 10px;
   color: #333;
@@ -136,4 +141,17 @@
 
 .booking-info button:hover {
   background-color: #e04850;
+}
+
+.map-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 400px;
+  width: 50%;
+  max-width: 450px;
+  padding: 10px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  border-radius: 20%;
+  margin: 0 auto;
 }
